# cost-revenue-etl-pipeline

./: .env.example  ARCHITECTURE.md  Dockerfile  INTERFACES.md  README.md  data-source.csv  demo_services.py  docker-compose.yml  pyproject.toml  test_domain_model.py
src/app/: cli.py
src/app/services/: etl.py
src/config/: config.py
src/domain/: shipment.py
src/domain/interfaces/: __init__.py  metrics.py  notification.py  repository.py  storage.py  validator.py
src/domain/services/: __init__.py  analytics_service.py  etl_service.py
src/infra/adapters/: __init__.py  console_notification_adapter.py  csv_repository_adapter.py  pandera_validator_adapter.py  s3_adapter.py  s3_storage_adapter.py  simple_metrics_adapter.py
