[project]
name = "shipping-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Neo",email = "iamkesington@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.40.18,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "rich (>=14.1.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
